@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="3"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="249"
+VERSION_BUILD="250"
 
 # $Log$
+#
+# 2009-02-22 17:57:20 1.4.3.250 (SVN) hal9000 [#527]
+# > Added InspIRCd 1.2 support (needs testing!)
+# > Added missing AWAY message handling in inspircd11
 #
 # 2009-02-22 11:34:04 1.4.3.249 (SVN) hal9000 [#]
 # > CTCP VERSION is now handled by alias if present
