@@ -4,13 +4,14 @@ Denora v1.4.3-SVN
 -----------------
 
 Additions
-n/a
+09/02/22 r250 Added InspIRCd 1.2 support [closes #527]
 
 Changes
 09/02/22 r249 CTCP VERSION is now handled by alias if present
 09/02/16 r239 Updated GeoIP.dat
 
 Fixes
+09/02/22 r250 Added missing AWAY message handling in inspircd11
 09/02/22 r247 Fixed sending broken CAPAB message to Plexus3
 09/02/22 r247 Workaround for missing EOB in Charybdis and NGircd
 09/02/19 r244 Fixed Plexus3 TOPIC, KILL, NICK, EOB handling and chanmode +z
